--- a/source/includes/api/auth/_index.md.erb
+++ b/source/includes/api/auth/_index.md.erb
@@ -1,5 +1,5 @@
 # Auth
 
-Authenticate a user's bill credentials via Unbill. This process may take anywhere from 5-30 seconds depending on the responsiveness of the company's website. If a `200` status code is returned, no additional MFA is required. If a `201` status code is returned, additional MFA is required to authenticate with the company and must be submitted via the `/auth/step` endpoint.
+Authenticate a user's bill credentials via <%= config.brand %>. This process may take anywhere from 5-30 seconds depending on the responsiveness of the company's website. If a `200` status code is returned, no additional MFA is required. If a `201` status code is returned, additional MFA is required to authenticate with the company and must be submitted via the `/auth/step` endpoint.
 
 ![Credentials View](<%= config.s3 %>/credentials-view.png)
