--- a/source/includes/api/auth/_item.md.erb
+++ b/source/includes/api/auth/_item.md.erb
@@ -1,6 +1,6 @@
 ## Auth items
 
-> Sample Bill Item
+> Example Bill Item
 
 ```json
 {
@@ -12,9 +12,3 @@
 
 After a successful authentication is made, a list of available `items` attached to an auth will be returned for convience. For more details about each of these items, access the items endpoints.
 Currently only `bill` items are supported, but additional items like `usage` and `transactions` are coming soon!
-
-Attribute | Description
---------- | -----------
-`type` | Type of item. `bill`
-`balance` | Current balance of a bill item
-`dueDate` | Current due date of a bill item
