--- a/source/includes/api/company/_logos.md.erb
+++ b/source/includes/api/company/_logos.md.erb
@@ -1,6 +1,6 @@
 ## Company logos
 
-The Unbill API provides image URL's for each company's logo. For our most popular companies, we also provide a white svg logo, along with the hex color of the company's brand. There are three ideal ways of presenting these logos in your apps.
+The <%= config.apiName %> provides image URL's for each company's logo. For our most popular companies, we also provide a white svg logo, along with the hex color of the company's brand. There are three ideal ways of presenting these logos in your apps.
 
 1. When the `company.logo.svg` is available, the svg logo looks best on the `company.logo.svg.color` background.
 
