--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -4,11 +4,14 @@ title: Unbill API
 includes:
   - introduction
   - authentication
+  - errors
+  - request-id
   - getting-started
-  - resources
+#  - resources
   - api/auth/index
   - api/auth/object
   - api/auth/auth
+  - api/auth/auth-flow
   - api/auth/item
   - api/auth/auth-step
   - api/auth/status
