--- a/source/includes/api/company/_categories.md.erb
+++ b/source/includes/api/company/_categories.md.erb
@@ -1,37 +1,33 @@
 ## Company categories
 
-> Sample Request
+> Example Request
+
+```shell
+curl "<%= config.host %>/company/categories" \
+  -H "<%= config.auth %>" \
+  -G
+```
+
+> Example Response
 
 ```json
 {
-  "apiKey": "<%= config.auth %>"
+  "data": [{
+    "name": "Electric",
+    "type": "electric",
+    "image": {
+      "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/mobile/billers/category_icons/electric.svg"
+    }
+  }]
 }
-```
-
-> Sample Response
-
-```json
-[{
-  "name": "Electric",
-  "type": "electric",
-  "image": {
-    "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/mobile/billers/category_icons/electric.svg"
-  }
-}]
-
 ```
 
 Retrieve a list of company categories you can use to search for companies by category `type`.
 
 ### HTTP Request
 
-`POST <%= config.host %>/company/categories`
+`GET <%= config.host %>/company/categories`
 
-### 200 Response Body
+### Returns
 
-Attribute | Description
---------- | -----------
-`name` | Name of the category.
-`type` | Type of category (used when searching for companies).
-`image` | Category image object.
-`image.url` | URL of category image svg.
+A dictionary with a `data` property that contains an array of company categories.
