--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -3,7 +3,44 @@
 > Sample Response
 
 ```json
-<%= config.companyResponseExample %>
+{
+  "_id": "579b695decea110719b1874d",
+  "name": "Netflix",
+  "logo": {
+    "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
+    "background": false,
+    "svg": {
+      "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.svg",
+      "color": "FF041F"
+    }
+  },
+  "requiredPayment": "bank",
+  "schedule": "on-due-date",
+  "auth": {
+    "urls": {
+      "login": "https://www.netflix.com/Login",
+      "signup": "https://www.netflix.com"
+    },
+    "loginFields": [{
+      "placeholder": "Username",
+      "formType": "text",
+      "name": "username",
+      "label": "Username"
+    }, {
+      "placeholder": "Password",
+      "formType": "password",
+      "name": "password",
+      "label": "Password"
+    }]
+  },
+  "geo": {
+    "lat": 30.70,
+    "lng": -95.53,
+    "state_short": "TX",
+    "state_long": "Texas",
+    "zipcode": "77340"
+  }
+}
 ```
 
 Attribute | Description
