--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -49,7 +49,7 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.svg" %>
+      <%= image_tag('logo.svg', :style => 'width: 70px') %>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
