--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -8,7 +8,6 @@
 @import 'variables2'; // tradegecko overrides
 @import 'icon-font';
 
-
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
 
@@ -29,7 +28,8 @@ under the License.
 // GENERAL STUFF
 ////////////////////////////////////////////////////////////////////////////////
 
-html, body {
+html,
+body {
   color: $main-text;
   padding: 0;
   margin: 0;
@@ -48,7 +48,7 @@ html, body {
 
 #toc > ul > li > a > span {
   float: right;
-  background-color: #2484FF;
+  background-color: #2484ff;
   border-radius: 40px;
   width: 20px;
 }
@@ -79,13 +79,13 @@ html, body {
   }
 
   // This is the logo at the top of the ToC
-  &>img {
+  & > img {
     display: block;
     max-width: 100%;
     margin: 20px auto 20px;
   }
 
-  &>.search {
+  & > .search {
     position: relative;
     margin: $nav-padding 0 20px;
 
@@ -108,7 +108,7 @@ html, body {
     }
   }
 
-  img+.tocify {
+  img + .tocify {
     margin-top: $logo-margin;
   }
 
@@ -142,7 +142,8 @@ html, body {
     }
   }
 
-  .tocify-item>a, .toc-footer li {
+  .tocify-item > a,
+  .toc-footer li {
     padding: $nav-padding 0;
     display: block;
     overflow-x: hidden;
@@ -151,7 +152,8 @@ html, body {
   // The Table of Contents is composed of multiple nested
   // unordered lists.  These styles remove the default
   // styling of an unordered list because it is ugly.
-  ul, li {
+  ul,
+  li {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -181,7 +183,7 @@ html, body {
     display: none; // tocify will override this when needed
     background-color: $nav-subitem-bg;
     font-weight: 500;
-    .tocify-item>a {
+    .tocify-item > a {
       padding-left: $nav-padding + $nav-indent;
       @extend %nav-font;
     }
@@ -192,7 +194,8 @@ html, body {
     margin-top: 1em;
     border-top: $dotted-border;
 
-    li,a {
+    li,
+    a {
       color: $nav-footer-text;
       text-decoration: none;
     }
@@ -206,7 +209,6 @@ html, body {
       text-decoration: none;
     }
   }
-
 }
 
 // button to show navigation on mobile devices
@@ -235,9 +237,10 @@ html, body {
 
   transition: left 0.3s ease-in-out;
 
-  &.open {left: $nav-width}
+  &.open {
+    left: $nav-width;
+  }
 }
-
 
 ////////////////////////////////////////////////////////////////////////////////
 // PAGE LAYOUT AND CODE SAMPLE BACKGROUND
@@ -281,14 +284,15 @@ html, body {
 
   a {
     display: block;
-    float:left;
+    float: left;
     color: $lang-select-text;
     text-decoration: none;
     padding: 0 10px;
     line-height: 30px;
     outline: 0;
 
-    &:active, &:focus {
+    &:active,
+    &:focus {
       background-color: $lang-select-pressed-bg;
       color: $lang-select-pressed-text;
       border-radius: $border-radius;
@@ -325,7 +329,18 @@ html, body {
     clear: both;
   }
 
-  &>h1, &>h2, &>h3, &>h4, &>h5, &>h6, &>p, &>table, &>ul, &>ol, &>aside, &>dl {
+  & > h1,
+  & > h2,
+  & > h3,
+  & > h4,
+  & > h5,
+  & > h6,
+  & > p,
+  & > table,
+  & > ul,
+  & > ol,
+  & > aside,
+  & > dl {
     margin-right: $examples-width;
     padding: 0 $main-padding;
     box-sizing: border-box;
@@ -334,13 +349,16 @@ html, body {
     @extend %left-col;
   }
 
-  &>ul, &>ol {
+  & > ul,
+  & > ol {
     padding-left: $main-padding + 15px;
   }
 
   // the div is the tocify hidden div for placeholding stuff
-  &>h1, &>h2, &>div {
-    clear:both;
+  & > h1,
+  & > h2,
+  & > div {
+    clear: both;
   }
 
   h1 {
@@ -353,7 +371,8 @@ html, body {
     border-top: $solid-border;
   }
 
-  h1:first-child, div:first-child + h1 {
+  h1:first-child,
+  div:first-child + h1 {
     border-top-width: 0;
     margin-top: 0;
   }
@@ -363,24 +382,30 @@ html, body {
     font-size: 24px;
     margin-bottom: 0;
     padding-top: 2em;
-    padding-bottom: .5em;
+    padding-bottom: 0.5em;
   }
 
   // h2s right after h1s should bump right up
   // against the h1s.
-  h1 + h2, h1 + div + h2 {
+  h1 + h2,
+  h1 + div + h2 {
     margin-top: $h1-margin-bottom * -1;
     border-top: none;
   }
 
-  h3, h4, h5, h6 {
+  h3,
+  h4,
+  h5,
+  h6 {
     @extend %header-font;
     font-size: 18px;
     margin-top: 2.5em;
     margin-bottom: 0.8em;
   }
 
-  h4, h5, h6 {
+  h4,
+  h5,
+  h6 {
     font-size: 10px;
   }
 
@@ -393,7 +418,8 @@ html, body {
   table {
     margin-bottom: 1em;
     overflow: auto;
-    th,td {
+    th,
+    td {
       text-align: left;
       vertical-align: top;
       line-height: 1.6;
@@ -412,7 +438,6 @@ html, body {
     tr:last-child {
       border-bottom: $solid-border;
     }
-
   }
 
   dt {
@@ -423,7 +448,10 @@ html, body {
     margin-left: 15px;
   }
 
-  p, li, dt, dd {
+  p,
+  li,
+  dt,
+  dd {
     line-height: 1.8;
     margin-top: 0;
     font-size: 16px;
@@ -451,7 +479,7 @@ html, body {
     @extend %code-font;
   }
 
-  pre>code {
+  pre > code {
     background-color: transparent;
     padding: 0;
     font-size: 14px;
@@ -468,7 +496,7 @@ html, body {
   aside:before {
     vertical-align: middle;
     padding-right: 0.2em;
-    @extend %base-font
+    @extend %base-font;
   }
 
   aside.notice:before {
@@ -500,7 +528,8 @@ html, body {
 // This is all the stuff that appears in the right half of the page
 
 .content {
-  pre, blockquote {
+  pre,
+  blockquote {
     background-color: $code-annotation-bg;
     color: $white;
 
@@ -508,14 +537,16 @@ html, body {
     margin: 0;
     width: $examples-width;
 
-    float:right;
-    clear:right;
+    float: right;
+    clear: right;
 
     box-sizing: border-box;
 
     @extend %right-col;
 
-    &>p { margin: 0; }
+    & > p {
+      margin: 0;
+    }
 
     a {
       color: $white;
@@ -529,7 +560,7 @@ html, body {
   }
 
   blockquote {
-    &>p {
+    & > p {
       background-color: rgba($code-bg, 0.3);
       border-radius: $border-radius;
       padding: $code-annotation-padding;
@@ -594,16 +625,20 @@ html, body {
   }
 }
 
-.private, .deprecated {
+.private,
+.deprecated {
   color: $white;
   background-color: $base-grey-70;
   border-radius: $border-radius;
   padding: 1px $nav-v-padding;
 
   @extend %label-font;
-    border-radius: 3px;
+  border-radius: 3px;
 }
-.highlight .c, .highlight .cm, .highlight .c1, .highlight .cs {
+.highlight .c,
+.highlight .cm,
+.highlight .c1,
+.highlight .cs {
   color: #909090;
 }
 
@@ -611,15 +646,19 @@ html, body {
   color: $tg-gold;
 }
 
-.highlight .mi, .highlight .mf {
+.highlight .mi,
+.highlight .mf {
   color: $tg-blue;
 }
 
-.highlight .str, .highlight .s2 {
+.highlight .str,
+.highlight .s2,
+.highlight .s1 {
   color: $tg-green;
 }
 
-.highlight, .highlight .w {
+.highlight,
+.highlight .w {
   background-color: $code-bg;
 }
 
@@ -628,4 +667,9 @@ html, body {
   padding: 10px;
   text-decoration: none;
   color: $tg-slate;
+}
+
+.opt {
+  margin-left: 5px;
+  opacity: 0.5;
 }
